# Waypie

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_NOTES.md  README.md  example-config.toml
.github/: copilot-instructions.md
examples/: config.toml
src/: color.rs  config.rs  cursor.rs  dbus_menu.rs  main.rs  sni_watcher.rs  telemetry.rs  ui.rs  utils.rs
src/hud/: app.rs  mod.rs
src/hud/radial_menu/: imp.rs  mod.rs
src/tray/: client.rs  mod.rs  watcher.rs
src/ui/: action_dispatcher.rs  action_handler.rs  adapter.rs  click_logic.rs  hover_state.rs  menu_model.rs  mod.rs  radial.rs  radial_imp.rs  window.rs
