[package]
name = "waypie"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# GUI & Wayland
iced = { version = "0.14", features = ["tokio", "canvas", "advanced", "svg", "image"] }
iced_layershell = "0.14" 
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# System Integration
ksni = { version = "0.3", features = ["blocking"] }
zbus = { version = "4.1", features = ["tokio"] }
xdg = "3.0"
system_shutdown = "4.1"

# Utils & Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
serde_json = "1.0.149"
