[package]
name = "waypie"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = "0.4"
cairo-rs = "0.20"
glib = "0.20"
gdk-pixbuf = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
async-channel = "2.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zbus = { version = "4", features = ["tokio"] }
xdg = "2.5"
notify = "8.2.0"
directories = "6.0.0"
shlex = "1.3.0"
anyhow = "1.0.100"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
futures-util = "0.3.31"
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
